# CS-275-HW-3

./: CMakeLists.txt  Doctor.cpp  Doctor.h  Pediatrician.cpp  Pediatrician.h  Person.cpp  Person.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Surgeon.cpp  Surgeon.h  Triangle.cpp  Triangle.h  main.cpp
